# viser

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CNAME  README.md  debug_camera_stream.py  index.html  objects.inv  package-lock.json  pyproject.toml  searchindex.js  sync_client_server.py  sync_message_defs.py  test.py
.doctrees/: client_handles.doctree  conventions.doctree  core.doctree  development.doctree  environment.pickle  events.doctree  extras.doctree  gui_handles.doctree  index.doctree  infrastructure.doctree  scene_handles.doctree  server.doctree  transforms.doctree
.doctrees/examples/: 00_coordinate_frames.doctree  01_image.doctree  02_camera_poses.doctree  02_gui.doctree  03_camera_commands.doctree  03_gui_callbacks.doctree  04_camera_poses.doctree  04_gui.doctree  05_camera_commands.doctree  05_gui_callbacks.doctree  06_mesh.doctree  07_record3d_visualizer.doctree  08_smpl_visualizer.doctree  08_smplx_visualizer.doctree  09_urdf_visualizer.doctree  10_realsense.doctree  11_colmap_visualizer.doctree  12_click_meshes.doctree  13_theming.doctree  14_markdown.doctree  15_gui_in_scene.doctree  16_modal.doctree  17_background_composite.doctree  18_splines.doctree  19_get_renders.doctree  20_scene_click.doctree  20_scene_pointer.doctree  21_set_up_direction.doctree  22_games.doctree
.github/workflows/: deploy_client.yml  docs.yml  eslint.yml  format.yaml  formatting.yaml  mypy.yml  publish.yml  pyright.yml  pyright_examples.yml  pytest.yml  typescript-compile.yml
_modules/: index.html
_modules/typing/: index.html
_sources/: conventions.md.txt  core.md.txt  development.md.txt  events.md.txt  gui_handles.md.txt  icons.md.txt  index.md.txt  infrastructure.md.txt  scene_handles.md.txt  server.md.txt
_sources/examples/: 01_image.rst.txt  02_camera_poses.rst.txt  02_gui.rst.txt  03_gui_callbacks.rst.txt  04_gui.rst.txt  05_camera_commands.rst.txt  05_gui_callbacks.rst.txt  06_mesh.rst.txt  07_record3d_visualizer.rst.txt  08_smpl_visualizer.rst.txt  08_smplx_visualizer.rst.txt  09_urdf_visualizer.rst.txt  10_realsense.rst.txt  12_click_meshes.rst.txt  13_theming.rst.txt  15_gui_in_scene.rst.txt  17_background_composite.rst.txt  18_splines.rst.txt  19_get_renders.rst.txt
_static/: pygments.css
_static/css/: custom.css
client/: package-lock.json  package.json
client/public/: index.html
client/src/: ControlPanel.tsx  GuiState.tsx  LabelRenderer.tsx  SceneTree.tsx  SearchParamsUtils.tsx  ThreeAssets.tsx  WebsocketInterface.tsx  WebsocketMessages.tsx  index.css  index.tsx
client_handles/: index.html
conventions/: index.html
core/: index.html
development/: index.html
docs/: Makefile  README.md  README_SCREENSHOTS.md  capture_example_screenshots.py  generate_example_docs.py  generate_handle_docs.py  requirements.txt  update_example_docs.py
docs/source/: camera_handles.md  citation.rst  client_handles.md  client_handles.rst  conf.py  conventions.md  conventions.rst  core.md  core_concepts.rst  development.md  development.rst  embedded_visualizations.rst  events.md  extras.md  getting_started.rst  gui_api.md  gui_handles.md  icons.md  index.md  index.rst  infrastructure.md  interactive_notebooks.ipynb  performance_tips.rst  quickstart.rst  scene_api.rst  scene_handles.md  server.md  server.rst  state_serializer.rst  theme.rst  transforms.md  troubleshooting.rst  uplot.rst
events/: index.html
examples/: 00_coordinate_frames.py  01_image.py  02_camera_poses.py  02_gui.py  03_camera_commands.py  03_gui_callbacks.py  04_camera_poses.py  04_gui.py  05_camera_commands.py  06_mesh.py  07_record3d_visualizer.py  08_smpl_visualizer.py  08_smplx_visualizer.py  09_urdf_visualizer.py  0_basic.py  0_coordinate_frames.py  10_realsense.py  11_colmap_visualizer.py  12_click_meshes.py  13_theming.py  14_markdown.py  14_modal.py  15_gui_in_scene.py  16_modal.py  16_popup_image.py  17_background_composite.py  17_popup_image.py  18_lines.py  18_splines.py  19_get_renders.py  1_image.py  20_glb.py  20_rayclick.py  20_scene_click.py  20_scene_pointer.py  21_gaussian_splats.py  21_set_up_direction.py  22_custom_gui_component.py  22_games.py  23_plotly.py  (+29 more)
examples/00_coordinate_frames/: index.html
examples/00_getting_started/: 00_hello_world.py  01_core_concepts.py
examples/01_image/: index.html
examples/01_scene/: 00_coordinate_frames.py  01_point_clouds.py  02_meshes.py  03_lines.py  04_images.py  05_meshes_batched.py  06_lighting.py  07_background_composite.py  08_set_up_direction.py  09_gaussian_splats.py  README.md
examples/02_camera_poses/: index.html
examples/02_gui/: 00_basic_controls.py  01_callbacks.py  02_layouts.py  03_markdown.py  04_modals.py  05_theming.py  06_gui_in_scene.py  06_notifications.py  07_notifications.py  (+7 more)
examples_dev/: 00_hello_world.py  02_gui.py  05_camera_commands.py  07_record3d_visualizer.py  08_smpl_visualizer.py  09_urdf_visualizer.py  10_realsense.py  13_theming.py  16_modal.py  18_lines.py  20_scene_pointer.py  22_games.py  23_plotly.py  24_plots_as_images.py  25_smpl_visualizer_skinned.py  28_meshes_batched.py  29_uplot.py  README.md
extras/: index.html
genindex/: index.html
gui_handles/: index.html
icons/: index.html
infrastructure/: index.html
latest/: index.html  objects.inv  searchindex.js
main/: .buildinfo  index.html  objects.inv  searchindex.js
py-modindex/: index.html
scene_handles/: index.html
search/: index.html
server/: index.html
tests/: __init__.py  test_garbage_collection.py  test_image_encode.py  test_initial_camera_defaults.py  test_message_annotations.py  test_server_stop.py  test_transforms_axioms.py  test_transforms_bijective.py  test_transforms_ops.py  test_version_sync.py  utils.py
transforms/: index.html
versions/: index.txt
viser/: __init__.py  _async_message_buffer.py  _client_autobuild.py  _gui.py  _gui_api.py  _gui_handles.py  _icons.py  _icons_enum.py  _icons_generate_enum.py  _message_api.py  _messages.py  _scene_handle.py  _scene_handles.py  _server.py  _tunnel.py  _typescript_interface_gen.py  _viser.py  hmm.py
(+5515 files in other folders)
