[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["src/viser/client/.nodeenv", "src/viser/client/node_modules", "**/__pycache__/**"]
# Client build is in the gitignore, but we still want it in the distribution.
ignore-vcs = true

[tool.hatch.version]
path = "src/viser/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["src/viser"]

[tool.hatch.build.targets.wheel]
packages = ["src/viser"]

[project]
name = "viser"
dynamic = ["version"]
description = "3D visualization + Python"
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests>=2.0.0,<3.0.0",
    "websockets>=13.1,<16.0.0",
    "numpy>=1.0.0,<3.0.0",
    "msgspec>=0.18.6,<1.0.0",
    "imageio>=2.0.0,<3.0.0",
    "tqdm>=4.0.0,<5.0.0",
    "rich>=13.3.3,<15.0.0",
    "trimesh>=3.21.7,<5.0.0",
    "yourdfpy>=0.0.53,<1.0.0",
    "typing_extensions>=4.0.0",
    "nodeenv>=1.9.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.308",
    "ruff>=0.9.3",
    "pre-commit==3.3.2",
    "pytest",
    "hypothesis[numpy]",
    "opencv-python>=4.0.0.21,<5.0.0",
    "psutil>=5.9.5,<8.0.0",
]
examples = [
    "torch>=1.13.1",
    "matplotlib>=3.7.1",
    "plotly>=5.21.0",
    "robot_descriptions>=1.18.0",
    "gdown>=4.6.6",
    "plyfile",
    "opencv-python",
    "pyliblzfse>=0.4.1; platform_system!='Windows'",
    "pandas",  # https://github.com/nerfstudio-project/viser/issues/457
    "tyro>=0.2.0,<1.0.0",
]

[project.urls]
"GitHub" = "https://github.com/nerfstudio-project/viser"

[project.scripts]
viser-build-client = "viser._client_autobuild:build_client_entrypoint"

[tool.pyright]
extraPaths = []
exclude = ["./docs/**/*", "./examples/assets/**/*", "./src/viser/client/.nodeenv", "./build"]

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
    "I",  # Import sorting.
]
lint.ignore = [
    "E731",  # Do not assign a lambda expression, use a def.
    "E741",  # Ambiguous variable name. (l, O, or I)
    "E501",  # Line too long.
    "E721",  # Do not compare types, use `isinstance()`.
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC0415",  # Import should be at the top-level of a file.
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Global statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
    "PLW0642",  # Reassigned self in instance method.
]
exclude = [ ".nodeenv" ]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
viser = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
examples = { features = ["examples"], solve-group = "default" }

[tool.pixi.tasks]
## Client-Server Synchronization
sync_client_server = "python sync_client_server.py --sync-messages --sync-version"

## 00: Getting Started
hello_world = "python examples/00_getting_started/00_hello_world.py"
core_concepts = "python examples/00_getting_started/01_core_concepts.py"

## 01: Scene
coordinate_frames = "python examples/01_scene/00_coordinate_frames.py"
point_clouds = "python examples/01_scene/01_point_clouds.py"
meshes = "python examples/01_scene/02_meshes.py"
lines = "python examples/01_scene/03_lines.py"
images = "python examples/01_scene/04_images.py"
meshes_batched = "python examples/01_scene/05_meshes_batched.py"
lighting = "python examples/01_scene/06_lighting.py"
background_composite = "python examples/01_scene/07_background_composite.py"
set_up_direction = "python examples/01_scene/08_set_up_direction.py"
gaussian_splats = "python examples/01_scene/09_gaussian_splats.py"

## 02: GUI
basic_controls = "python examples/02_gui/00_basic_controls.py"
callbacks = "python examples/02_gui/01_callbacks.py"
layouts = "python examples/02_gui/02_layouts.py"
markdown = "python examples/02_gui/03_markdown.py"
modals = "python examples/02_gui/04_modals.py"
theming = "python examples/02_gui/05_theming.py"
notifications = "python examples/02_gui/06_notifications.py"
plotly_integration = "python examples/02_gui/07_plotly_integration.py"
uplot = "python examples/02_gui/08_uplot.py"
plots_as_images = "python examples/02_gui/09_plots_as_images.py"

## 03: Interaction
click_meshes = "python examples/03_interaction/00_click_meshes.py"
scene_pointer = "python examples/03_interaction/01_scene_pointer.py"
get_renders = "python examples/03_interaction/02_get_renders.py"
camera_poses = "python examples/03_interaction/03_camera_poses.py"
camera_commands = "python examples/03_interaction/04_camera_commands.py"
gui_in_scene = "python examples/03_interaction/05_gui_in_scene.py"

## 04: Demos
record3d_visualizer = "python examples/04_demos/00_record3d_visualizer.py"
colmap_visualizer = "python examples/04_demos/01_colmap_visualizer.py"
urdf_visualizer = "python examples/04_demos/02_urdf_visualizer.py"
smpl_visualizer = "python examples/04_demos/03_smpl_visualizer.py"
smpl_skinned = "python examples/04_demos/04_smpl_skinned.py"
games = "python examples/04_demos/05_games.py"
